--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "jasmine-core": "~3.8.0",
+        "jasmine-core": "^3.8.0",
         "jasmine-spec-reporter": "~1.7.0",
         "karma": "~5.0.0",
         "karma-chrome-launcher": "~3.1.0",
