--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dependencies": {
         "@angular/animations": "^9.1.7",
         "@angular/common": "~9.1.6",
-        "@angular/core": "~9.1.13",
+        "@angular/core": "~9.1.6",
         "@angular/forms": "~9.1.6",
         "@angular/platform-browser": "~9.1.6",
         "@angular/platform-browser-dynamic": "~9.1.6",
@@ -75,8 +75,8 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
-        "jasmine-core": "^3.8.0",
-        "jasmine-spec-reporter": "~1.7.0",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
         "karma": "~5.0.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage-istanbul-reporter": "~2.1.0",
